--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/awesome" >
+        android:theme="@style/Base.Animation.AppCompat.DropDownUp" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
